# ruLearn

./: AUTHORS  Makefile.am  README  README.md  configure.ac  ruLearn-1.0.pc.in  ruLearn.in
apertium-patch/test/: input2  testApertiumPatchAutoconf.sh
giza-pp/GIZA++-v2/: Makefile.am
giza-pp/GIZA++-v2/.deps/: ATables.Po  AlignTables.Po  Dictionary.Po  ForwardBackward.Po  HMMTables.Po  MoveSwapMatrix.Po  NTables.Po  Parameter.Po  Perplexity.Po  TTables.Po  alignment.Po  collCounts.Po  getSentence.Po  hmm.Po  main.Po  model1.Po  model2.Po  model2to3.Po  model3.Po  model345-peg.Po  model3_viterbi.Po  model3_viterbi_with_tricks.Po  myassert.Po  parse.Po  plain2snt.Po  reports.Po  snt2cooc.Po  snt2plain.Po  transpair_model3.Po  transpair_model4.Po  transpair_model5.Po  utility.Po  vocab.Po
giza-pp/mkcls-v2/.deps/: GDAOptimization.Po  HCOptimization.Po  IterOptimization.Po  KategProblem.Po  KategProblemKBC.Po  KategProblemTest.Po  KategProblemWBC.Po  MYOptimization.Po  Optimization.Po  Problem.Po  ProblemTest.Po  RRTOptimization.Po  SAOptimization.Po  StatVar.Po  TAOptimization.Po  general.Po  mkcls.Po
phrase-extraction/: Makefile.am
phrase-extraction/src/: TransferRule.C  TransferRule.H  apertium-gen-transfer-from-aligment-templates.C  configure.H  configure.H.in  stamp-h1
phrase-extraction/src/.deps/: Alignment.Po  AlignmentTemplate.Po  LexicalizedWords.Po  PTXReader.Po  SentenceAlignment.Po  TablesCore.Po  TransferRule.Po  Utils.Po  apertium-add-restrictions-to-sl.Po  apertium-apply-biling.Po  apertium-gen-transfer-from-aligment-templates.Po  apertium-posttransfer.Po  apertium-symmetrize-alignments.Po  apertium-xtract-bilingual-phrases-koehn-2003.Po  apertium-xtract-bilingual-phrases.Po  zfstream.Po
phrase-extraction/transfer-tools-scripts/: Makefile-phrase-extract  extract-phrases-v3.sh  generateCorpusFromBildic.sh  trainGIZA++.sh
rule-generalisation/: Makefile.am  addDebugInfoToTransferRules-debug.py  addDebugInfoToTransferRules.py  addGeneralisedLeftSide.py  addPosAndRestrictionsStr.py  addStandardBoxDescToOnlyLexical.py  addWordInforToReport.py  beamSearch.py  beamSearchLib.py  chooseATs.py  collapseSourcetarget.py  computeSupersetsOfKeySegments.py  createModeForBeamSearchEvaluation.sh  createModeNoRules.sh  createModeWithLearnedRules.sh  extractPhrases.py  filterAlignmentTemplates.py  filterBilphrasesMatchingAT.py  generateMultipleATsFromBilphrases.py  generatePostTransferXML.py  maximiseScore.py  mteval-v11b-nosgm.sh  newstest2010head40.en  newstest2010head40.es  python_wrapper.in  removeDebugInfoFromTransfer.py  removeExplicitEmptuTagsFromPatternTLandRest.py  ruLearn-beamSearch  ruLearn-beamSearch.in  ruLearn-evaluateRules  ruLearn-evaluateRules.in  ruLearn-generateATs  ruLearn-generateATs.in  ruLearn-generateApertiumFormat  ruLearn-generateApertiumFormat.in  ruLearn-minimiseATs  ruLearn-minimiseATs.in  ruLearn-removeRedundantRules  ruLearn-removeRedundantRules.in  ruLearn-selectRulesMaximiseScore  (+12 more)
